# Citadel-Protocol

./: .dockerignore  .gitattributes  .gitguardian.yaml  .gitignore  .gitlab-ci.yml  .gitmodules  .memory.jsonl  AUDIT_SUMMARY.md  BARRIER_MISMATCH_ANALYSIS.md  CITADEL_KEYGEN_SPAWN_BLOCKING_FIXES.md  CITADEL_NEXUS.md  CITADEL_NEXUS_AUDIT.md  CLAUDE.md  CODEOWNERS  CONCURRENCY_FIXES_SUMMARY.md  Cargo.toml  Cargo.wasix.toml  DEADLOCK_FIX_SUMMARY.md  DIRECTIONS.txt  FIXES_APPLIED.md  FLAKY_TESTS.md  FLAKY_TESTS_RUN2.md  FLAKY_TESTS_RUN3.md  FLAKY_TESTS_RUN4.md  FLAKY_TEST_ANALYSIS.md  FLAKY_TEST_ANALYSIS_FIXLOG.md  LICENSE  LICENSE-MIT  Makefile.toml  NEXUS_BUILD_SUCCESS.md  NEXUS_FINAL_STATUS.md  NEXUS_REFACTORING_STATUS.md  RATCHET_RACE_FIX_LOG.md  RATCHET_STABILITY_ANALYSIS.md  README.md  SECURITY.md  build-android.bat  build-apple.sh  build-docs.sh  build.sh  (+36 more)
async_ip/: Cargo.toml  README.md
async_ip/src/: lib.rs
async_ip/tests/: primary.rs
async_mem/: Cargo.toml
async_mem/benches/: benchmarks.rs
async_mem/src/: hyxeobject.rs  lib.rs
async_mem/tests/: memtest.rs
async_udt/: Cargo.toml
async_udt/examples/: server.rs
async_udt/src/: lib.rs
citadel_crypt/: Cargo.toml
citadel_crypt/benches/: crypto_hot_path.rs
citadel_crypt/src/: endpoint_crypto_container.rs  entropy_bank.rs  lib.rs  messaging.rs  messsaging.rs  misc.rs  ordered_channel.rs  packet_vector.rs  ratchet_manager.rs  stacked_ratchet.rs  streaming_crypt_scrambler.rs  sync_toggle.rs  toolset.rs
citadel_crypt/tests/: pfs_chain_aead.rs  primary.rs  wasm_crypto.rs
citadel_io/: Cargo.toml
citadel_io/src/: lib.rs  proto_io.rs  time.rs
citadel_io_macros/: Cargo.toml
citadel_io_macros/src/: lib.rs
citadel_logging/: Cargo.toml
citadel_logging/src/: lib.rs
citadel_nexus/: Cargo.toml
citadel_nexus/examples/: nexus_integration.rs
citadel_nexus/src/: error.rs  lib.rs
citadel_nexus/tests/: mod.rs  unified_tests.rs
citadel_pqcrypto/: Cargo.toml  README.md
citadel_pqcrypto/src/: bytes_in_place.rs  constructor_opts.rs  encryption.rs  export.rs  ez_error.rs  lib.rs  per_message_aead.rs  replay_attack_container.rs  wire.rs
citadel_pqcrypto/tests/: primary.rs
citadel_proto/: Cargo.toml
citadel_proto/backup/: constants.rs
citadel_proto/examples/: citadel_node_compatibility.rs
citadel_proto/src/: auth.rs  constants.rs  error.rs  functional.rs  fuzz_targets.rs  inner_arg.rs  lib.rs
citadel_proto/tests/: connections.rs
citadel_runtime/: Cargo.toml
citadel_runtime/src/: lib.rs
citadel_sdk/: Cargo.toml  all.html  attr.async_trait.html  client.rs  index.html  macro.impl_remote!.html  macro.impl_remote.html  server.rs  sidebar-items.js
citadel_sdk/backend_kv_store/: index.html  sidebar-items.js  trait.BackendHandler.html
citadel_sdk/benches/: inbound_file_contention.rs  macro_throughput.rs  multi_session_throughput.rs  multi_vconn_throughput.rs
citadel_sdk/examples/: client.rs  client_ping.rs  peer.rs  server.rs  server_ping.rs  wasm_test_server.rs
citadel_sdk/fs/: fn.delete.html  fn.read.html  fn.read_with_security_level.html  fn.take.html  fn.take_with_security_level.html  fn.write.html  fn.write_with_security_level.html  index.html  sidebar-items.js
citadel_sdk/prefabs/: fn.get_socket_addr.html  index.html  sidebar-items.js  struct.ClientServerRemote.html
citadel_sdk/prelude/: attr.async_trait.html  constant.AES_GCM_NONCE_LENGTH_BYTES.html  constant.ASCON_NONCE_LENGTH_BYTES.html  constant.C2S_IDENTITY_CID.html  constant.CHA_CHA_NONCE_LENGTH_BYTES.html  constant.KEM_ALGORITHM_COUNT.html  constant.KYBER_NONCE_LENGTH_BYTES.html  constant.LARGEST_NONCE_LEN.html  enum.AuthenticationRequest.html  enum.BackendType.html  enum.ConnectMode.html  enum.ConnectProtocol.html  enum.EncryptionAlgorithm.html  enum.GenericNetworkStream.html  enum.GroupBroadcast.html  enum.GroupBroadcastPayload.html  enum.GroupMemberAlterMode.html  enum.GroupType.html  enum.HeaderObfuscatorSettings.html  enum.KemAlgorithm.html  enum.MemberState.html  enum.NetworkError.html  enum.NodeConnectionType.html  enum.NodeRequest.html  enum.NodeResult.html  enum.NodeType.html  enum.ObjectTransferOrientation.html  enum.ObjectTransferStatus.html  enum.PeerConnectionType.html  enum.PeerResponse.html  enum.PeerSignal.html  enum.ProposedCredentials.html  enum.ReKeyReturnType.html  enum.SecrecyMode.html  enum.SecurityLevel.html  enum.ServerUnderlyingProtocol.html  enum.SigAlgorithm.html  enum.TrackedCallbackError.html  enum.TransferType.html  enum.UdpMode.html  (+117 more)
citadel_sdk/remote_ext/: fn.map_errors.html  index.html  sidebar-items.js  struct.ConnectionSuccess.html  struct.RegisterSuccess.html  trait.ProtocolRemoteExt.html  trait.ProtocolRemoteTargetExt.html
citadel_sdk/responses/: fn.group_invite.html  fn.peer_connect.html  fn.peer_register.html  index.html
citadel_sdk/src/: backend_kv_store.rs  fs.rs  lib.rs  macros.rs  net.rs  remote_ext.rs  responses.rs  test_common.rs
citadel_sdk/tests/: reconnection_both_c2s.rs  reconnection_c2s.rs  reconnection_one_c2s.rs  reconnection_p2p_one_c2s.rs  reconnection_p2p_only.rs  rekey_messaging_test.rs  reserve_write_test.rs  stress_reconnect_c2s.rs  stress_reconnect_p2p.rs  stress_tests.rs  wasm_backend.rs  wasm_basic_p2p.rs  wasm_c2s_connect.rs  wasm_crypto.rs  wasm_p2p_connect.rs
citadel_treekem/: Cargo.toml
citadel_treekem/src/: application.rs  commit.rs  crypto.rs  group.rs  hierarchy.rs  hierarchy_member.rs  keys.rs  lib.rs  path.rs  schedule.rs  welcome.rs
citadel_types/: Cargo.toml  build.rs
citadel_types/src/: lib.rs
citadel_user/: Cargo.toml
citadel_user/src/: account_loader.rs  account_manager.rs  lib.rs  (+8 more)
citadel_wire/: Cargo.toml
dashmap/: Cargo.toml  README.md
dpb_kem/: Cargo.toml  README.md
example-library/: Cargo.toml  README.md
ez_pqcrypto/: Cargo.toml  README.md
fcm-rust/: Cargo.toml  README.md
firebase-rtdb/: Cargo.toml
fuzz/: .gitignore  Cargo.toml  README.md
hyxe_config/: Cargo.toml
hyxe_crypt/: Cargo.toml
hyxe_derive/: Cargo.toml
hyxe_fs/: Cargo.toml
hyxe_nat/: Cargo.toml
hyxe_net/: Cargo.toml  build.rs  run-tests.sh
(+2382 files in other folders)
