[workspace]

members = [
    "lusna_sdk",
    "hyxe_wire",
	"hyxe_user",
	"hyxe_fs",
	"hyxe_crypt",
	"async_ip",
	"ez_pqcrypto",
	"hyxe_net",
    "firebase-rtdb",
    "netbeam",
]

exclude = [
    "./target/*"
]

[profile.dev]
split-debuginfo = "unpacked"

[licenses]
default = "warn"
confidence-threshold = 0.95

allow = [
    "MIT",
    "Apache-2.0",
    "MIT OR Apache-2.0"
]