[workspace]
resolver = "3"

members = [
    "citadel_sdk",
    "citadel_wire",
    "citadel_user",
    "citadel_crypt",
    "async_ip",
    "citadel_pqcrypto",
    "citadel_proto",
    "firebase-rtdb",
    "netbeam",
    "citadel_logging",
    "citadel_io",
    "citadel_types",
    "example-library",
]

exclude = [
    "./target/*",
]

[workspace.dependencies]
# workspace deps
citadel_sdk = { path = "./citadel_sdk", default-features = false, version = "0.13.0" }
citadel_wire = { path = "./citadel_wire", default-features = false, version = "0.13.0" }
citadel_user = { path = "./citadel_user", default-features = false, version = "0.13.0" }
citadel_crypt = { path = "./citadel_crypt", default-features = false, version = "0.13.0" }
citadel_pqcrypto = { path = "./citadel_pqcrypto", default-features = false, version = "0.13.0" }
citadel_proto = { path = "./citadel_proto", default-features = false, version = "0.13.0" }
citadel_logging = { path = "./citadel_logging", default-features = false, version = "0.13.0" }
citadel_io = { path = "./citadel_io", default-features = false, version = "0.13.0" }
citadel_types = { path = "./citadel_types", default-features = false, version = "0.13.0" }
netbeam = { path = "./netbeam", default-features = false, version = "0.13.0" }
firebase-rtdb = { path = "./firebase-rtdb", default-features = false, version = "0.13.0" }
async_ip = { path = "./async_ip", default-features = false, version = "0.13.0" }

# examples
citadel-examples = { path = "./example-library", default-features = false }

# ordinary deps
generic-array = { version = "0.14.6" }
enum_primitive = { default-features = false, version = "0.1.1" }
aes-gcm = { version = "0.10.3", default-features = false }
chacha20poly1305 = { version = "0.10.1", default-features = false }
log = { default-features = false, version = "0.4.17" }
strum = { version = "0.27.1", default-features = false }
strum_macros = { version = "0.27.1", default-features = false }
sha3 = { version = "0.10", default-features = false }
kyber-pke = { version = "0.5.0", default-features = false }
packed_struct = { version = "0.10.1" }
getrandom = { version = "0.2.8", default-features = false }
serde-big-array = { default-features = false, version = "0.5.0" }
ascon-aead = { default-features = false, version = "0.4.0" }
tracing-subscriber = { version = "0.3.16" }
reqwest_wasi = { version = "0.11.16", default-features = false }
reqwest = { version = "0.12.7", default-features = false }
tokio = { version = "1.47.0" }
bytes = { default-features = false, version = "1.3.0" }
async-trait = { default-features = false, version = "0.1.61" }
anyhow = { default-features = false, version = "1.0.68" }
rand = { default-features = false, version = "0.8.5" }
async-stream = { default-features = false, version = "0.3.3" }
sync_wrapper = { default-features = false, version = "1.0.0" }
async-recursion = { version = "1.0.4" }
rstest = { version = "0.23.0" }
bincode = { default-features = false, version = "1.3.3" }
serde = { version = "1.0.152", default-features = false }
futures = { version = "0.3.25", default-features = false }
byteorder = { version = "1.4.3", default-features = false }
num-integer = { default-features = false, version = "0.1.45" }
arrayvec = { version = "0.7.2", default-features = false }
bitvec = { default-features = false, version = "1.0.1" }
rust-argon2 = { version = "2.0", default-features = false }
tokio-stream = { default-features = false, version = "0.1.17" }
zeroize = { default-features = false, version = "1.5.7" }
libc = { version = "0.2.139", default-features = false }
kernel32-sys = { version = "0.2.2", default-features = false }
rayon = { default-features = false, version = "1.7.0" }
sysinfo = { default-features = false, version = "0.29.8" }
num_cpus = { default-features = false, version = "1.15.0" }
async-trait-with-sync = { default-features = false, version = "0.1.36" }
uuid = { version = "1.2.2", default-features = false }
tracing = { version = "0.1.37", default-features = false }
lazy_static = { default-features = false, version = "1.4.0" }
socket2 = { version = "0.5.7", default-features = false }
rustls-native-certs = { version = "0.8.0", default-features = false }
igd = { version = "^0.12.0", default-features = false }
quinn = { version = "0.11.5", default-features = false }
stun = { default-features = false, version = "0.5.0" }
rcgen = { default-features = false, version = "0.13.1" }
rustls = { version = "0.23.13", default-features = false }
rustls-pemfile = { default-features = false, version = "2.1.3" }
tokio-rustls = { default-features = false, version = "0.26.0" }
itertools = { version = "0.11.0", default-features = false }
serde_millis = { default-features = false, version = "0.1.1" }
multimap = { default-features = false, version = "0.9.0" }
parking_lot = { version = "0.12.1" }
twox-hash = { default-features = false, version = "1.6.3" }
serde_json = { default-features = false, version = "1.0.91" }
base64 = { version = "0.21.2", default-features = false }
bstr = { default-features = false, version = "1.1.0" }
sqlx = { version = "0.7.2" }
redis-base = { package = "redis", version = "0.23.0" }
mobc = { version = "0.8.1", default-features = false }
jwt = { version = "0.16.0", default-features = false }
openssl = { version = "0.10.66", default-features = false }
chrono = { default-features = false, version = "0.4.23" }
tokio-util = { version = "0.7.15", default-features = false }
dirs2 = { default-features = false, version = "3.0.1" }
embedded-semver = { version = "0.3.0", default-features = false }
auto_impl = { default-features = false, version = "1.0.1" }
zerocopy = { default-features = false, version = "0.7.7" }
atomic = { default-features = false, version = "0.6.0" }
bytemuck = { default-features = false, version = "1.13.1" }
either = { default-features = false, version = "1.8.0" }
once_cell = { default-features = false, version = "1.17.0" }
webrtc-util = { version = "0.8.0" }
embed-doc-image = { version = "0.1.4" }
hyper = { version = "0.14.25" }
sha256 = { version = "1.5.0" }
tokio-openssl = { version = "0.6.3" }
openssl-sys = { version = "0.9.104" }
ml-dsa = { version = "0.0.4" }
ts-rs = { version = "11", features = ["bytes"] }
