[package]
name = "async_ip"
version = "0.4.0"
authors = ["Thomas Braun <thomas.braun@avarok.net>"]
edition = "2021"
description = "An asynchronous client used to obtain one's global Ipv6 or Ipv4 address"
readme = "../README.md"
homepage = "https://avarok.net/"
repository = "https://github.com/Avarok-Cybersecurity/Citadel-Protocol"
categories = ["cryptography", "post-quantum", "quantum", "network-programming", "asynchronous"]
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = [
    "tokio/net",
    "futures/std",
]
wasm = [
]

[target.'cfg(target_family = "wasm")'.dependencies]
reqwest = { version = "0.11.16", package = "reqwest-wasm", default-features = false, features = ["rustls", "rustls-native-certs", "rustls-tls"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
reqwest = { version = "0.11.13", default-features = false, features = ["rustls", "rustls-native-certs", "rustls-tls"] }

[dependencies]
tokio = { version = "1.24", default-features = false, features = ["macros"] }
serde = { version = "1.0.152", default-features = false, features = ["derive"] }
futures = { version = "0.3.25", default-features = false, features = ["alloc"] }
