[package]
name = "async_ip"
version = "0.11.1"
authors = ["Thomas Braun <thomas.braun@avarok.net>"]
edition = "2021"
description = "An asynchronous client used to obtain one's global Ipv6 or Ipv4 address"
readme = "../README.md"
homepage = "https://avarok.net/"
repository = "https://github.com/Avarok-Cybersecurity/Citadel-Protocol"
categories = ["cryptography", "network-programming", "asynchronous"]
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = [
    "tokio/net",
    "futures/std",
]
wasm = [
]

[target.'cfg(target_family = "wasm")'.dependencies]
reqwest = { workspace = true, package = "reqwest-wasm", features = ["rustls", "rustls-native-certs", "rustls-tls"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
reqwest = { workspace = true, features = ["rustls", "rustls-native-certs", "rustls-tls"] }

[dependencies]
tokio = { workspace = true, features = ["macros"] }
serde = { workspace = true, features = ["derive"] }
futures = { workspace = true, features = ["alloc"] }
