[package]
name = "async_ip"
version = "0.13.0"
authors = ["Thomas Braun <thomas.braun@avarok.net>"]
edition = "2021"
description = "An asynchronous client used to obtain one's global Ipv6 or Ipv4 address"
readme = "../README.md"
homepage = "https://avarok.net/"
repository = "https://github.com/Avarok-Cybersecurity/Citadel-Protocol"
categories = ["cryptography", "network-programming", "asynchronous"]
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = [
    "futures/std",
    "serde",
]
wasm = [
]

[target.'cfg(not(target_family = "wasm"))'.dependencies]
reqwest = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
ureq = { version = "2.9.6", default-features = false }

[dependencies]
citadel_io = { workspace = true}
serde = { workspace = true, features = ["derive"], optional = true }
futures = { workspace = true, features = ["alloc"] }
async-trait = { workspace = true }
auto_impl = { workspace = true }
