[package]
name = "citadel_io"
version = "0.7.0"
authors = ["Thomas Braun <thomas.braun@avarok.net>"]
edition = "2021"
description = "Underlying runtime for interfacing with I/O for std/wasm targets"
homepage = "https://avarok.net/"
repository = "https://github.com/Avarok-Cybersecurity/Citadel-Protocol"
workspace = ".."
readme = "../README.md"
categories = ["cryptography", "network-programming", "asynchronous"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = []
wasm = []
deadlock-detection = ["parking_lot/deadlock_detection"]



[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { workspace = true, features = ["net", "rt", "macros", "io-util", "time", "fs", "sync", "parking_lot"] }
tokio-util = { workspace = true, features = ["codec", "net", "time", "io"] }
tokio-stream = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
tokio_wasm = { package = "tokio", version = "=1.24.2", git = "https://github.com/wasix-org/tokio.git", branch = "wasix-1.24.2-fixed", features = [
    "sync", "macros", "io-util", "rt", "time", "net", "fs", "rt-multi-thread", "io-std"
]}
tokio-util-wasm = { package = "tokio-util", version = "=0.7.3", git = "https://github.com/wasix-org/tokio.git", branch = "wasix-1.24.2-fixed", features = ["codec", "net", "time", "io"]}
tokio-stream-wasm = { package = "tokio-stream", version = "=0.1.9", git = "https://github.com/wasix-org/tokio.git", branch = "wasix-1.24.2-fixed"}

[target.'cfg(not(target_family="wasm"))'.dependencies]
parking_lot = { workspace = true }

