[package]
name = "citadel_io"
version = "0.14.0"
authors = ["Thomas Braun <thomas.braun@avarok.net>"]
edition = "2021"
description = "Underlying runtime for interfacing with I/O for std/wasm targets"
homepage = "https://avarok.net/"
repository = "https://github.com/Avarok-Cybersecurity/Citadel-Protocol"
workspace = ".."
readme = "../README.md"
categories = ["cryptography", "network-programming", "asynchronous"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = ["net"]
wasi = ["socket2_wasm"]
deadlock-detection = ["parking_lot/deadlock_detection"]
net = ["tokio/net", "tokio-util/net"]
# Linux-only io_uring inbound-UDP backend. Off by default; the unsafe ring code lives here behind this
# feature. On non-Linux targets the deps resolve to nothing, so enabling it is a harmless no-op.
io-uring = ["dep:io-uring", "dep:libc"]

[dependencies]
citadel_io_macros = { workspace = true }
rand = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { workspace = true, features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "io-util",
    "time",
    "fs",
    "sync",
    "parking_lot",
] }
tokio-util = { workspace = true, features = ["codec", "time", "io"] }
tokio-stream = { workspace = true }
parking_lot = { workspace = true }

# io_uring backend deps live only on Linux (the io-uring crate does not build elsewhere). Optional and
# gated behind the `io-uring` feature, so a default build pulls in neither.
[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { workspace = true, optional = true }
libc = { workspace = true, optional = true }

[target.'cfg(target_family = "wasm")'.dependencies]
# NOTE: `git` forces the WASI fork (branch v1.36.x = tokio 1.36.0) for actual wasm builds; the
# version is only a constraint. It must stay caret-compatible with the native tokio requirement
# (^1.47) so `cargo package`/publish — which strips the git source and maps both to crates.io —
# can resolve a single tokio version. An exact `=1.36.0` pin makes the crate unpublishable.
tokio_wasm = { package = "tokio", version = "1.36", git = "https://github.com/second-state/wasi_tokio.git", branch = "v1.36.x", features = [
    "macros",
    "sync",
    "rt",
    "io-util",
] }
socket2_wasm = { package = "socket2", optional = true, version = "=0.5.7", git = "https://github.com/second-state/socket2.git", branch = "v0.5.x" }
tokio-util-wasm = { package = "tokio-util", version = "0.7.3", git = "https://github.com/second-state/wasi_tokio.git", branch = "v1.36.x", features = [
    "codec",
    "io",
] }
tokio-stream-wasm = { package = "tokio-stream", version = "0.1.4", git = "https://github.com/second-state/wasi_tokio.git", branch = "v1.36.x" }
wasmtimer = "0.4"
getrandom = { workspace = true, features = ["wasm_js"] }
serde = { workspace = true, default-features = false, features = [
    "derive",
    "std",
] }
