[package]
name = "citadel_logging"
version = "0.1.0"
authors = ["Thomas Braun <thomas.braun@avarok.net>"]
edition = "2021"
homepage = "https://avarok.net/"
repository = "https://github.com/Avarok-Cybersecurity/Citadel-Protocol"
readme = "../README.md"
categories = ["cryptography", "post-quantum", "quantum", "encryption", "network-programming", "asynchronous"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.37"
#tracing-subscriber = { git = "https://github.com/tokio-rs/tracing.git", branch = "v0.1.x", features = ["env-filter"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
log = "0.4.17"