[package]
name = "citadel_logging"
version = "0.1.0"
authors = ["Thomas Braun <thomas.braun@avarok.net>"]
edition = "2021"
description = "logging library for the Citadel Protocol"
homepage = "https://avarok.net/"
repository = "https://github.com/Avarok-Cybersecurity/Citadel-Protocol"
readme = "../README.md"
categories = ["cryptography", "post-quantum", "quantum", "network-programming", "asynchronous"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
log = "0.4.17"