[package]
name = "citadel_nexus"
version = "0.13.0"
authors = ["Thomas Braun <thomas.braun@avarok.net>"]
description = "Cross-platform I/O abstraction layer for the Citadel Protocol"
edition = "2021"
workspace = ".."
homepage = "https://avarok.net/"
repository = "https://github.com/Avarok-Cybersecurity/Citadel-Protocol"
readme = "../README.md"
categories = ["network-programming", "asynchronous", "wasm"]
license = "MIT OR Apache-2.0"

[features]
default = ["std"]

# Platform targets
std = [
    "citadel_io/std",
    "citadel_wire/std",
    "tokio/net",
    "quinn",
    "rustls",
]

wasm = [
    "citadel_io/wasm", 
    "web-sys",
    "wasm-bindgen",
    "wasm-bindgen-futures",
    "js-sys",
]

# Threading support
multi-threaded = []

# Testing features
localhost-testing = ["citadel_wire/localhost-testing", "tracing"]

[dependencies]
# Workspace dependencies
citadel_io = { workspace = true, default-features = false }
citadel_types = { workspace = true, default-features = false }
citadel_wire = { workspace = true, default-features = false, optional = true }

# Common dependencies
async-trait = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
bytes = { workspace = true }
tracing = { workspace = true, optional = true }
async_ip = { workspace = true }
socket2 = { workspace = true }
stun = { workspace = true }
serde_json = { workspace = true, features = ["std"] }
getrandom = { workspace = true }

# Standard target dependencies
[target.'cfg(not(target_family = "wasm"))'.dependencies]
citadel_wire = { workspace = true, default-features = false }
quinn = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
tokio = { workspace = true, features = ["net", "rt"] }

# WebAssembly target dependencies
[target.'cfg(target_family = "wasm")'.dependencies]
web-sys = { version = "0.3", features = [
    "RtcPeerConnection",
    "RtcDataChannel", 
    "RtcConfiguration",
    "RtcIceServer",
    "WebSocket",
    "MessageEvent",
    "ErrorEvent",
    "CloseEvent",
], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }

[dev-dependencies]
tokio-test = "0.4"
rstest = { workspace = true }