[package]
name = "citadel_nexus"
version = "0.13.0"
authors = ["Thomas Braun <thomas.braun@avarok.net>"]
description = "Cross-platform I/O abstraction layer for the Citadel Protocol"
edition = "2021"
workspace = ".."
homepage = "https://avarok.net/"
repository = "https://github.com/Avarok-Cybersecurity/Citadel-Protocol"
readme = "../README.md"
categories = ["network-programming", "asynchronous", "wasm"]
license = "MIT OR Apache-2.0"

[features]
default = ["std"]

# Platform targets
std = [
    "citadel_io",
    "citadel_io/std", 
    "citadel_wire",
    "citadel_wire/std",
    "tokio/net",
    "quinn",
    "rustls",
]

wasm = [
    "web-sys",
    "wasm-bindgen", 
    "wasm-bindgen-futures",
    "js-sys",
]

# Threading support
multi-threaded = []

# Testing features
localhost-testing = ["citadel_wire/localhost-testing", "tracing"]

[dependencies]
# Workspace dependencies  
citadel_types = { workspace = true, default-features = false }

# Common dependencies
async-trait = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "macros"], default-features = false }
bytes = { workspace = true }
tracing = { workspace = true, optional = true }
serde_json = { workspace = true, features = ["std"] }
getrandom = { workspace = true }
uuid = { workspace = true }

# Standard target dependencies
[target.'cfg(not(target_family = "wasm"))'.dependencies]
citadel_io = { workspace = true, default-features = false, optional = true }
citadel_wire = { workspace = true, default-features = false, optional = true }
quinn = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
tokio = { workspace = true, features = ["net", "rt"] }
async_ip = { workspace = true }
socket2 = { workspace = true }
stun = { workspace = true }
uuid = { workspace = true }

# WebAssembly target dependencies  
[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen-futures = { version = "0.4", optional = true }
futures-util = { version = "0.3" }
futures = { version = "0.3", features = ["alloc", "std"] }
log = { version = "0.4" }
citadel_types = { path = "../citadel_types" }
uuid = { workspace = true }
web-sys = { version = "0.3", features = [
    "RtcPeerConnection",
    "RtcPeerConnectionIceEvent",
    "RtcDataChannel", 
    "RtcDataChannelInit",
    "RtcDataChannelState",
    "RtcConfiguration",
    "RtcIceServer",
    "RtcSessionDescription",
    "RtcSessionDescriptionInit",
    "RtcIceCandidate",
    "RtcIceCandidateInit",
    "RtcSdpType",
    "BinaryType",
    "WebSocket",
    "MessageEvent",
    "ErrorEvent",
    "CloseEvent",
    "Window",
], optional = true }
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"], optional = true }

[dev-dependencies]
tokio-test = "0.4"
rstest = { workspace = true }